# imandrax-api

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  .shellcheckrc  Cargo.toml  Makefile  README.md  cli.sh  dune-project  imandra-proof-system.opam  imandrax-api-cli.opam  imandrax-api-client-batrpc.opam  imandrax-api-client-cohttp.opam  imandrax-api-client-cohttp.opam.template  imandrax-api-client-ezcurl.opam  imandrax-api-client-ezcurl.opam.template  imandrax-api-client.opam  imandrax-api-ppx.opam  imandrax-api-prelude.opam  imandrax-api-proto.opam  imandrax-api-top.opam  imandrax-api.opam  imandrax-api.opam.template  top.sh
src/api/python/lib/: README.md  pyproject.toml
src/cli/: cli_opts_.ml  common_.ml  dune  imandrax_api_cli.ml  login.ml  repl.ml  utils.ml
src/client/twirp-cohttp/: dune  imandrax_api_client_cohttp.ml  imandrax_api_client_cohttp_lwt.ml
src/client/twirp-ezcurl/: dune  imandrax_api_client_ezcurl.ml
src/core/: .ocamlformat-ignore  HashtblCache.ml  admission.ml  anchor.ml  applied_symbol_poly.ml  as_trigger.ml  builtin.ml  builtin_data.ml  ca_codec.ml  case_poly.ml  chash.ml  chash.mli  clique.ml  cname.ml  common_.ml  const.ml  dune  fun_decomp_poly.ml  fun_def_poly.ml  gitid.ml  hints_poly.ml  in_mem_archive.ml  logic_fragment.ml  model.ml  pattern_head_view.ml  sequent_poly.ml  stat_time.ml  statistics.ml  sub_anchor.ml  tactic_poly.ml  trace_options.ml  ty_view.ml  type_schema_poly.ml  typed_symbol_poly.ml  uid.ml  uid.mli  upto.ml  util_twine.ml  util_twine_.ml  var_poly.ml  (+2 more)
src/lib/artifact/zip/: dune  imandrax_api_artifact_zip.ml
src/lib/ca_store/: ca_codec.ml  ca_ptr.ml  ca_ptr.mli  dune  imandrax_api_ca_store.ml  key.ml  key.mli  reader.ml  storage.ml  typed_key.ml  typed_key.mli  writer.ml
src/lib/cir/: applied_symbol.ml  case.ml  clique.ml  db_ser.ml  decomp.ml  dune  elimination_rule.ml  fo_pattern.ml  fun_decomp.ml  fun_def.ml  hints.ml  pattern_head.ml  pre_trigger.ml  proof_obligation.ml  region.ml  rewrite_rule.ml  sequent.ml  tactic.ml  term.ml  trigger.ml  type.ml  type_schema.ml  typed_symbol.ml  var.ml  with_ty.ml
src/lib/common/: admission.ml  applied_symbol.ml  db_op.ml  db_ser.ml  decl.ml  decomp.ml  dune  elimination_rule.ml  fo_pattern.ml  fun_decomp.ml  fun_def.ml  hints.ml  instantiation_rule.ml  instantiation_rule_kind.ml  model.ml  pattern_head.ml  pre_trigger.ml  proof_obligation.ml  region.ml  rewrite_rule.ml  rule_spec.ml  sequent.ml  tactic.ml  theorem.ml  trigger.ml  type_schema.ml  typed_symbol.ml  var.ml  verify.ml
src/lib/genbindings/: artifact.ml  common_.ml  dune  expand_aliases.ml  expand_aliases.mli  gen_python.ml  gen_rust.ml  gen_ts.ml  genbindings.ml  remove_ocaml_only_fields.ml  remove_ocaml_only_fields.mli  resolve_artifacts.ml  resolve_ty_defs.ml  resolve_ty_defs.mli  ty_set.ml  utils.ml
src/lib/mir/: applied_symbol.ml  case.ml  db_ser.ml  decl.ml  decomp.ml  dune  elimination_rule.ml  fo_pattern.ml  fun_decomp.ml  fun_def.ml  hints.ml  instantiation_rule.ml  model.ml  pattern_head.ml  proof_obligation.ml  region.ml  rewrite_rule.ml  sequent.ml  tactic.ml  term.ml  theorem.ml  top_fun.ml  trigger.ml  type.ml  type_schema.ml  typed_symbol.ml  var.ml
src/lib/proof/: arg.ml  cir_proof_term.ml  dune  imandrax_api_proof.ml  mir_proof_term.ml  proof_term.ml  proof_term_poly.ml  var_poly.ml  view.ml
src/lib/proof2/: dune  imandrax_api_proof2.ml
src/lib/proof3/: .ocamlformat-ignore  common_.ml  common_pr_.ml  deep_proof_step.ml  deep_seq.ml  deep_sequent.ml  dune  entrypoint.ml  imandrax_api_proof3.ml  offset_of.ml  offset_of.mli  proof_step.ml  reader.ml  scope.ml  tree_node.ml  types.ml  writer.ml
src/lib/report/: atomic_event.ml  dune  event.ml  expansion.ml  instantiation.ml  report.ml  rtext.ml  smt_proof.ml
src/proof-system/codegen/: codegen.ml  codegen_md.ml  codegen_ocaml.ml  codegen_ocaml.mli  dune  ocaml_prelude.ml
src/proof-system/core/: dune  encoder.ml  imandra_proof_system.ml
src/proof-system/spec/: dune  imandra_proof_system_spec.ml  spec.json
src/proto/: .ocamlformat-ignore  api.ml  api.mli  api.proto  artmsg.ml  artmsg.mli  artmsg.proto  dune  error.ml  error.mli  error.proto  imandrax_api_proto.ml  locs.ml  locs.mli  locs.proto  session.ml  session.mli  session.proto  simple_api.ml  simple_api.mli  simple_api.proto  system.ml  system.mli  system.proto  task.ml  task.mli  task.proto  utils.ml  utils.mli  utils.proto
src/proto/py/: Makefile  __init__.py  imandrax_api.py  session_pb2.py  session_twirp.py  setup.py  simple_api_pb2.py  simple_api_twirp.py  system_pb2.py  system_twirp.py  utils_pb2.py  utils_twirp.py
src/py/: .gitignore  Makefile  __init__.py  _async.py  _common.py  api_types_version.py  imandrax_api.py  pyproject.toml  setup.py
src/py-gen/: .gitignore  CLAUDE.md  README.md  ast.toml  cli.ml  decode_art.ml  dune  helper.ml  helper.mli  pyproject.toml  test_helper.ml  typereg.json
src/py-gen/docs/: README.md  architecture.md  artifact-loading.md
src/py-gen/examples/: dune
src/py-gen/lib/: art_loader.ml  ast.ml  dune  parse.ml  pretty_print.ml  util.ml
src/py-gen/python/: ast_deserialize.py  ast_types.py  main.py  tagged_types.py
src/py-gen/scripts/: gen_art.py  gen_art_batch.py  py_ast.py
src/py-gen/test/: dune  test.ml  test_model.ml
src/py/bindings/: Makefile  __init__.py  api_pb2.py  api_pb2.pyi  api_twirp.py  api_twirp_async.py  artmsg_pb2.py  artmsg_twirp.py  artmsg_twirp_async.py  error_pb2.py  error_twirp.py  error_twirp_async.py  locs_pb2.py  locs_twirp.py  locs_twirp_async.py  session_pb2.py  session_twirp.py  session_twirp_async.py  simple_api_pb2.py  simple_api_pb2.pyi  simple_api_twirp.py  simple_api_twirp_async.py  system_pb2.py  system_twirp.py  system_twirp_async.py  task_pb2.py  task_twirp.py  task_twirp_async.py  utils_pb2.py  utils_twirp.py  utils_twirp_async.py
src/py/client/: __init__.py  _async.py  _common.py
src/py/lib/: Makefile  __init__.py  lib.py  test_twine.py  twine.py
src/py/protoc-gen-twirpy/: README.md  go.mod
src/py/twirp/: README.md  async_client.py
src/top/: dune  imandrax_api_top.ml
(+370 files in other folders)
