(executable
 (name imandrax_api_cli)
 (public_name imandrax-api-cli)
 (package imandrax-api-cli)
 (preprocess
  (pps ppx_subliner ppx_deriving.std))
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (libraries
  imandrax-api.proto
  imandrax-api-client.core
  imandrax-api-client-ezcurl
  xdg
  containers
  trace
  trace-tef
  unix
  uuidm
  webbrowser
  tiny_httpd
  moonpool
  linenoise))
