(library
 (public_name imandrax-api-proto)
 (name imandrax_api_proto)
 (flags :standard -open Imandrax_api_artifact)
 (libraries pbrt pbrt_yojson pbrt_services imandrax-api.artifact))

(rule
 (alias genproto)
 (targets api.ml api.mli)
 (deps
  (:file api.proto))
 (mode promote)
 (action
  (run ocaml-protoc --ml_out=. --pp --binary --services --make %{file})))

(rule
 (alias genproto)
 (targets error.ml error.mli)
 (deps
  (:file error.proto))
 (mode promote)
 (action
  (run ocaml-protoc --ml_out=. --pp --binary --services --make %{file})))

(rule
 (alias genproto)
 (targets locs.ml locs.mli)
 (deps
  (:file locs.proto))
 (mode promote)
 (action
  (run ocaml-protoc --ml_out=. --pp --binary --services --make %{file})))

(rule
 (alias genproto)
 (targets utils.ml utils.mli)
 (deps
  (:file utils.proto))
 (mode promote)
 (action
  (run ocaml-protoc --ml_out=. --pp --binary --services --make %{file})))
