; Library definition
(library
 (name py_gen)
 (modules helper)
 (libraries
  imandrax-api
  imandrakit
  containers))

; Executable
(executable
 (name cli)
 (modules cli)
 (libraries
  py_gen
  imandrax-api
  imandrakit
  containers))


; Decode artifacts
(executable
  (name decode_art)
  (modules decode_art)
  (libraries
    imandrax-api
    imandrax-api.artifact
    imandrax-api.mir
    yojson
    containers
    base64
    py_gen
  )
)
