[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imandrax_api"
version = "0.18.1"
description = "Imandrax API client library"
requires-python = ">=3.12"
dependencies = [
    "protobuf==5.29.5",
    "requests",
    "structlog",
]

[project.optional-dependencies]
async = ["aiohttp"]

[tool.setuptools]
packages = [ "imandrax_api", "imandrax_api.bindings", "imandrax_api.lib", "imandrax_api.twirp" ]
package-dir = { "imandrax_api" = "." }

[tool.pyright]
strict = ["**"]
venvPath = "."
venv = ".venv"

[tool.ruff]
indent-width = 4
target-version = "py312"

exclude = ["lib/__init__.py", "bindings/"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
]
