[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imandrax_api"
version = "0.20"
description = "Imandrax API client library"
requires-python = ">=3.12"
dependencies = [
    "protobuf==5.29.6",
    "requests",
    "structlog",
]

[project.optional-dependencies]
async = ["aiohttp"]

[tool.setuptools]
packages = [
    "imandrax_api",
    "imandrax_api.bindings",
    "imandrax_api.client",
    "imandrax_api.lib",
    "imandrax_api.twirp",
]
package-dir = { "imandrax_api" = "." }

[tool.pyright]
strict = ["**"]
venvPath = "."
venv = ".venv"

[tool.ruff]
indent-width = 4
target-version = "py312"

exclude = ["lib/__init__.py", "bindings/"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "pyright>=1.1.408",
]
