(library
 (name imandrax_api_ca_store)
 (public_name imandrax-api.ca-store)
 (synopsis "Storage via cryptographic content-addressing")
 (flags
  :standard
  -safe-string
  -open
  Imandrakit
  -open
  Imandrax_api
  -open
  Imandrakit_log
  -open
  Imandrakit_thread)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (libraries
  containers
  iter
  cryptokit
  imandrax-api
  imandrakit
  imandrakit-thread
  imandrakit-io
  imandrakit-log))
