(library
 (name imandrax_api_cir)
 (public_name imandrax-api.cir)
 (libraries
  imandrakit
  imandrakit.typereg
  imandrax-api
  imandrax-api.model
  imandrax-api.ca-store
  zarith)
 (flags
  :standard
  -open
  Imandrakit
  )
 (modes native byte)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (synopsis "Public API types for Imandrax"))
