(library
 (name imandrax_api_common)
 (public_name imandrax-api.common)
 (libraries
  imandrakit
  imandrakit.typereg
  zarith
  cryptokit
  imandrax-api
  imandrax-api.ca-store)
 (flags :standard -open Imandrakit)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (synopsis "Common types for Imandrax"))
