; generate bindings to the API types from other languages

(executable
 (name genbindings)
 (flags :standard -open Imandrakit)
 (preprocess
  (pps ppx_deriving.std))
 (libraries imandrakit imandrakit.typereg iter))

(rule
 (targets data_.ml)
 (deps
  (:types ../typereg.json)
  (:arts ../artifact/artifact.json))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let types = {yolojson|")
    (cat %{types})
    (echo "|yolojson}")
    (echo "let artifacts = {yolojson|")
    (cat %{arts})
    (echo "|yolojson}")))))
