(library
 (name imandrax_api_mir)
 (public_name imandrax-api.mir)
 (libraries
  imandrakit
  imandrakit.typereg
  imandrax-api
  imandrax-api.common
  imandrax-api.ca-store
  zarith)
 (flags :standard -open Imandrakit)
 (modes native byte)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (synopsis "Public API types for Imandrax"))
