(library
 (name imandrax_api_proof3)
 (public_name imandrax-api.proof3)
 (synopsis "Proof terms for ImandraX.")
 (flags
  :standard
  -open
  Imandrakit
  -open
  Imandrax_api
  -open
  Imandrax_api_common)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (libraries
  imandrakit
  imandrax-api
  imandrax-api.common
  imandrax-api.mir))

(rule
 (targets types.ml)
 (mode promote)
 (action
  (with-stdout-to
   %{targets}
   (run ./gen/mk_rules.exe))))

(rule
 (targets doc.md)
 (mode promote)
 (action
  (with-stdout-to
   %{targets}
   (run gen/mk_rules.exe --doc))))

(install
 (section doc)
 (package imandrax-api)
 (files doc.md))
