(library
 (name imandrax_api_report)
 (public_name imandrax-api.report)
 (synopsis "User-readable report")
 (flags :standard -open Imandrakit -open Imandrax_api)
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (libraries imandrakit imandrax-api imandrax-api.cir imandrax-api.mir))
