; Library for artifact loading and Python code generation
(library
 (name py_gen)
 (modules art_loader)
 (libraries
  imandrax-api
  imandrax-api.artifact
  imandrax-api.mir
  imandrakit
  imandrakit.twine
  yojson
  containers
  base64
  fmt)
 (inline_tests
  (deps (source_tree ../examples)))
 (preprocess
  (pps ppx_expect)))
