(library
 (name imandrax_api_tasks)
 (public_name imandrax-api.tasks)
 (synopsis "Tasks for ImandraX")
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (flags :standard -open Imandrakit -open Imandrax_api -open Imandrax_api_cir)
 (libraries
  imandrakit
  imandrax-api
  imandrax-api.cir
  imandrax-api.eval
  imandrax-api.proof
  imandrax-api.report))
