(library
 (name imandrax_api_tasks)
 (public_name imandrax-api.tasks)
 (synopsis "Tasks for ImandraX")
 (preprocess
  (pps ppx_deriving.std imandrakit.twine.ppx imandrakit.typereg.ppx))
 (flags
  :standard
  -open
  Imandrakit
  -open
  Imandrax_api
  -open
  Imandrax_api_cir
  -open
  Imandrax_api_ca_store)
 (libraries
  imandrakit
  imandrax-api
  imandrax-api.cir
  imandrax-api.ca-store
  imandrax-api.eval
  imandrax-api.proof
  imandrax-api.report))
