[package]
name = "twine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bumpalo = {version="3.16", optional=true}

[dev-dependencies]

anyhow = "1"
bumpalo = "3.16"
insta = "1.39.0"
pretty-hex = "0.4.1"

