[package]
name = "twine-data"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/c-cube/twine-data.rs.git"
description = "Codec for the twine-data binary serialization format"
homepage = "https://twine-data.dev/"
categories = ["encoding"]

[dependencies]
bumpalo = {version="3.16", optional=true}

[dev-dependencies]
bumpalo = "3.16"
proptest = "1.0"
leb128 = "0.2"
serde_json = { version = "1.0.135", default-features = false, features = ["preserve_order", "std"] }

[features]

bumpalo = ["dep:bumpalo"]
